Release 1.0.0 — raw StAX, ECMA-376 type safety, 12x read performance
Performance:
- Replace XMLBeans with raw StAX parsing (12x read improvement)
- Remove POI SharedStrings/RichTextString dependency
- Add Aalto XML as default StAX implementation (25% faster than JDK)
- Cache ColumnPointer parent/head/elements (24% memory reduction for nested POJOs)

Architecture:
- Rewrite XmlElementReader as lightweight StAX reader
- Introduce ECMA-376 spec types: CTCell, STCellType, STCellFormulaType, SpreadsheetML
- Replace SharedStrings with SharedStringLookup (no POI interface dependency)
- Replace Path-based ColumnPointer with String[] SegmentPointer

DX:
- Register ExcelDateModule by default
- Add ColumnNameResolver.annotated() factory method
- Fail fast on unregistered style names
- Open enum setters on CellStyleBuilder/FontBuilder

Code quality:
- Jackson coding style compliance (import order, line length, field naming)
- Remove Lombok @Getter/@RequiredArgsConstructor, keep @EqualsAndHashCode/@Slf4j
- Javadoc on all classes
- Self-contained tests (no fixture files except Strict OOXML)

Compatibility:
- Java 8+, Jackson 2.14.0+, POI 5.1.0+ (verified)

CI/CD:
- GitHub Actions: build on push/PR, release on tag
- GitHub Packages publishing